--- a/src/main/webapp/detailsOverlay.css
+++ b/src/main/webapp/detailsOverlay.css
@@ -15,8 +15,8 @@ background-color: rgba(0, 0, 0, 0.4);
 font-size: 20px;
 font-weight: bold;
 background-color: #D3D3D3;
-margin-top: 150px;
-margin-left: 300px;
+margin-top: 100px;
+margin-left: 180px;
 padding: 20px;
 border: 1px solid #888;
 width: 70%;
@@ -28,6 +28,7 @@ float: right;
 margin-top: -10px;
 font-size: 40px;
 font-weight: bold;
+transition-duration: 0.4s;
 }
 .close:hover, .close:focus {
 color: #ff1010;
