--- a/src/main/webapp/detailsOverlay.css
+++ b/src/main/webapp/detailsOverlay.css
@@ -10,13 +10,24 @@ width: 100%;
 height: 100%;
 background-color: rgba(0, 0, 0, 0.4);
 }
-
+.wrapper{
+font-size: 20px;
+font-weight: bold;
+background-color: #D3D3D3;
+max-height: 150px;
+margin-left: 30px;
+padding: 20px;
+width: 90%;
+overflow-y: scroll;
+overflow-x: hidden;
+}
 .detailContent {
 font-size: 20px;
 font-weight: bold;
 background-color: #D3D3D3;
 margin-top: 100px;
 margin-left: 180px;
+max-height: 250px;
 padding: 20px;
 border: 1px solid #888;
 width: 70%;
